Implement multi-page site and update styles

--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Compton Property Studio — Plymouth Floor Plans (24–48h)</title>
 <meta name="description" content="Fast, accurate floor plans in Plymouth. 24–48h delivery with optional next-day. Agent-ready PDFs and images. HMO room-size check (advisory).">
 <link rel="stylesheet" href="style.css">
 <script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "LocalBusiness",
-"name": "Compton Property Studio",
-"description": "Property floor plans in Plymouth with 24–48h turnaround and optional next-day.",
-"areaServed": "Plymouth, UK",
-"priceRange": "Â£Â£",
-"url": "https://www.comptonpropertystudio.co.uk",
-"telephone": "+44 7000 000000",
-"email": "hello@comptonpropertystudio.co.uk"
-}
+{"@context":"https://schema.org","@type":"LocalBusiness","name":"Compton Property Studio","description":"Property floor plans in Plymouth with 24–48h turnaround and optional next-day.","areaServed":"Plymouth, UK","priceRange":"££","url":"https://www.comptonpropertystudio.co.uk","telephone":"+44 7000 000000","email":"hello@comptonpropertystudio.co.uk"}
 </script>
-</head>
-<body>
+</head><body>
+
 <header>
   <div class="container nav">
     <div class="brand">
@@ -46,9 +33,9 @@
     <h1>Fast, accurate, agent-ready floor plans</h1>
     <p>Clean plans with room labels, key dimensions, north arrow and scale bar. Delivered as A4/A3 PDF and listing-ready images. Optional HMO room-size check (advisory). Local, punctual, no faff.</p>
     <div class="kpis">
-      <div class="pill">Standard plan Â£100</div>
-      <div class="pill">Next-day +Â£40</div>
-      <div class="pill">HMO check +Â£40</div>
+      <div class="pill">Standard plan £100</div>
+      <div class="pill">Next-day +£40</div>
+      <div class="pill">HMO check +£40</div>
       <div class="pill">PL postcodes included</div>
     </div>
     <div class="kpis">
@@ -62,44 +49,34 @@
       <h3>Agent-ready files</h3>
       <p class="notice">A4/A3 PDFs + PNG/JPG that drop straight into portals and brochures.</p>
       <ul class="list">
-        <li>Room labels + key dimensions</li>
-        <li>Total approx. area</li>
-        <li>North arrow + scale bar</li>
+        <li>Room labels + key dimensions</li><li>Total approx. area</li><li>North arrow + scale bar</li>
       </ul>
     </div>
     <div class="card">
       <h3>Reliable turnarounds</h3>
       <p class="notice">Standard delivery in 24–48h. Limited next-day slots available.</p>
       <ul class="list">
-        <li>Tidy, legible drawings</li>
-        <li>Minor tweaks free (7 days)</li>
-        <li>Predictable time windows</li>
+        <li>Tidy, legible drawings</li><li>Minor tweaks free (7 days)</li><li>Predictable time windows</li>
       </ul>
     </div>
     <div class="card">
       <h3>HMO room-size check</h3>
       <p class="notice">Advisory bedroom schedule with usable areas to speed landlord decisions.</p>
-      <ul class="list">
-        <li>Bundle with the visit</li>
-        <li>Clearly annotated</li>
-        <li>Not a licensing decision</li>
-      </ul>
+      <ul class="list"><li>Bundle with the visit</li><li>Clearly annotated</li><li>Not a licensing decision</li></ul>
     </div>
   </section>
 </main>
 
 <footer>
   <div class="container">
-    Â© <span id="y"></span> Compton Property Studio • Marketing floor plans (not for construction).
+    © <span id="y"></span> Compton Property Studio • Marketing floor plans (not for construction).
   </div>
 </footer>
 <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
 <script>
+  // active nav highlight
   const path = location.pathname.split('/').pop() || 'index.html';
   const map = {"index.html":"nav-home","services.html":"nav-services","pricing.html":"nav-pricing","examples.html":"nav-examples","contact.html":"nav-contact"};
-  if (map[path]) {
-    document.getElementById(map[path]).classList.add('active');
-  }
+  if(map[path]) document.getElementById(map[path]).classList.add('active');
 </script>
-</body>
-</html>
+</body></html>
